--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -195,7 +195,7 @@
     position: absolute;
     top: 474px;
     left: 157px;
-    width: 265px;
+    width: 260px;
     left: 107px;
     font-size: 12px;
 }
@@ -246,7 +246,7 @@
     position: absolute;
     top: 610px;
     left: 157px;
-    width: 265px;
+    width: 260px;
     left: 107px;
     font-size: 12px;
 }
@@ -308,7 +308,7 @@
     position: absolute;
     top: 745px;
     left: 157px;
-    width: 265px;
+    width: 260px;
     left: 107px;
     font-size: 12px;
 }
@@ -360,7 +360,7 @@
 .af-5{
     position: absolute;
     top: 881px;
-    width: 265px;
+    width: 260px;
     left: 107px;
     font-size: 12px;
 }
@@ -414,7 +414,7 @@
     position: absolute;
     top: 1018px;
     left: 107px;
-    width: 265px;
+    width: 260px;
     font-size: 12px;
 }
 .atenc_6{
@@ -517,7 +517,7 @@
     position: absolute;
     top: 1293px;
     left: 107px;
-    width: 265px;
+    width: 260px;
     font-size: 12px;
 }
 
@@ -569,7 +569,7 @@
     position: absolute;
     top: 1432px;
     left: 107px;
-    width: 265px;
+    width: 260px;
     font-size: 12px;
 }
 .atenc_9{
@@ -620,7 +620,7 @@
     position: absolute;
     top: 1568px;
     left: 107px;
-    width: 265px;
+    width: 260px;
     font-size: 12px;
 }
 .atenc_10{
@@ -671,7 +671,7 @@
     position: absolute;
     top: 1705px;
     left: 107px;
-    width: 265px;
+    width: 260px;
     font-size: 12px;
 }
 .atenc_11{
@@ -721,7 +721,7 @@
     position: absolute;
     top: 1842px;
     left: 107px;
-    width: 265px;
+    width: 260px;
     font-size: 12px;
 }
 .atenc_12{
@@ -771,7 +771,7 @@
     position: absolute;
     top: 1978px;
     left: 107px;
-    width: 265px;
+    width: 260px;
     font-size: 12px;
 }
 .atenc_13{
@@ -814,7 +814,7 @@
     position: absolute;
     top: 2112px;
     left: 107px;
-    width: 265px;
+    width: 260px;
     font-size: 12px;
 }
 .atenc_14{
@@ -839,7 +839,7 @@ position: fixed;
 width: 60px;
 height: 60px;
 bottom: 40px;
-right: 35px;
+left: 300px;
 background-color: #25d366;
 color: #fff;
 border-radius: 50px;
