--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -145,6 +145,7 @@
     left: 107px;
     width: 260px;
     font-size: 12px;
+    margin-right: 5px;
 }
 
 .atenc_1{
@@ -199,6 +200,7 @@
     width: 250px;
     left: 107px;
     font-size: 12px;
+    margin-right: 5px;
 }
 
 .atenc_2{
@@ -250,6 +252,7 @@
     width: 250px;
     left: 107px;
     font-size: 12px;
+    margin-right: 5px;
 }
 
 .atenc_3{
@@ -312,6 +315,7 @@
     width: 250px;
     left: 107px;
     font-size: 12px;
+    margin-right: 5px;
 }
 
 .atenc_4{
@@ -364,6 +368,7 @@
     width: 250px;
     left: 107px;
     font-size: 12px;
+    margin-right: 5px;
 }
 
 .atenc_5{
@@ -417,6 +422,7 @@
     left: 107px;
     width: 260px;
     font-size: 12px;
+    margin-right: 5px;
 }
 .atenc_6{
     position: absolute;
@@ -468,6 +474,7 @@
     left: 107px;
     width: 250px;
     font-size: 12px;
+    margin-right: 5px;
 }
 
 .atenc_7{
@@ -520,6 +527,7 @@
     left: 107px;
     width: 250px;
     font-size: 12px;
+    margin-right: 5px;
 }
 
 .atenc_8{
@@ -572,6 +580,7 @@
     left: 107px;
     width: 250px;
     font-size: 12px;
+    margin-right: 5px;
 }
 .atenc_9{
     position: absolute;
@@ -623,6 +632,7 @@
     left: 107px;
     width: 250px;
     font-size: 12px;
+    margin-right: 5px;
 }
 .atenc_10{
     position: absolute;
@@ -674,6 +684,7 @@
     left: 107px;
     width: 250px;
     font-size: 12px;
+    margin-right: 5px;
 }
 .atenc_11{
     position: absolute;
@@ -724,6 +735,7 @@
     left: 107px;
     width: 250px;
     font-size: 12px;
+    margin-right: 5px;
 }
 .atenc_12{
     position: absolute;
@@ -774,6 +786,7 @@
     left: 107px;
     width: 250px;
     font-size: 12px;
+    margin-right: 5px;
 }
 .atenc_13{
     position: absolute;
@@ -817,6 +830,7 @@
     left: 107px;
     width: 250px;
     font-size: 12px;
+    margin-right: 5px;
 }
 .atenc_14{
     position: absolute;
