--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -22,12 +22,12 @@
 
 
 .logo{
-    width: 240px;
-    height: 270px;
+    width: 230px;
+    height: 250px;
     position: absolute;
-    top: 100px;
-    left: 70px;
-
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     
     
 }
@@ -35,17 +35,17 @@
     width:16px;
     height: 14px;
     position: absolute;
-    top: 355px;
-    left: 153px;
+    top: 407px;
+    left: 150px;
 }
 
 
 #medida{
     position: absolute;
-    top: 347px;
-    left: 173px;
+    top: 394px;
+    left: 170px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 2.5vw;
+    font-size: 0.8em;
 }
 
 #prody{
@@ -61,12 +61,13 @@
 
 #product{
     position: absolute;
-    top: 365px;
     border-radius: 5px;
     width: 200px;
     height: 20px;
     background-color: #9b6e3a;
-    left: 70px;
+    top: 52%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
@@ -873,33 +874,38 @@ z-index: 1000;
     position: absolute;
     top: 130px;
     left: 115px;
-    background: rgb(255, 253, 253);
+    background: rgb(113, 52, 224);
     height: 36px;
     width: 150px;
     border-radius: 5px;
-    margin-right: 500px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     
 }
-
-.searce-text{
-    position: absolute;
-    top: 130px;
-    left: 120px;
+/* input{
     box-shadow: 0 0 0 0;
-    background: none;
     border: none;
+    background: none;
+    outline: none
+} */
+.search-txt{
+   
+    box-shadow: 0 0 0 0;
+    border: none;
+    background: none;
     outline: none;
-    width: 0;
 }
 
-.search-btn{
+/* .search-btn{
     width: 50px;
     height: 50px;
-}
+} */
 .lupa-azul{
-    position: absolute;
+    /* position: absolute;
     top: 6px;
-    right: 5px;
+    right: 5px; */
     width: 21px;
     height: 21px;
 }
@@ -1062,7 +1068,7 @@ z-index: 1000;
     background-color: rgb(223, 222, 222);
     position: absolute;
     top: 100px;
-    height: 2440px;
+    height: 2250px;
     width: 380px;
     left: 0%;
         }
