--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -25,7 +25,7 @@
     width: 230px;
     height: 250px;
     position: absolute;
-    top: 35%;
+    top: 400px;
     left: 50%;
     transform: translate(-50%, -50%);
     
