--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -30,6 +30,14 @@
     transform: translate(-50%, -50%);
 }
 
+.ult{
+    width: 332px;
+    height: 263px;
+    position: absolute;
+    top: 335px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 #prody{
     color: rgb(58, 140, 233);
@@ -48,7 +56,7 @@
     width: 200px;
     height: 20px;
     background-color: #9b6e3a;
-    top: 434px;
+    top: 460px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
